--- a/speed_optimization.ipynb
+++ b/speed_optimization.ipynb
@@ -102,18 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.6"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'DirectDmTargets.detector.DetectorSpectrum'>\n"
+     ]
     }
    ],
    "source": [
