--- a/first_working_example.ipynb
+++ b/first_working_example.ipynb
@@ -782,10 +782,10 @@
     "    param = priors[key]\n",
     "    if param['prior_type'] == 'flat':\n",
     "        param['param'] = param['range']\n",
-    "        param['dist'] = lambda x: flat_prior(x)\n",
+    "        param['dist'] = lambda x: flat_prior_distribution(x)\n",
     "    elif param['prior_type'] == 'gauss':\n",
     "        param['param'] = param['mean'], param['std']\n",
-    "        param['dist'] = lambda x: gaus_prior(x)\n",
+    "        param['dist'] = lambda x: gaus_prior_distribution(x)\n",
     "    "
    ]
   },
@@ -901,10 +901,10 @@
     "    param = priors[key]\n",
     "    if param['prior_type'] == 'flat':\n",
     "        param['param'] = param['range']\n",
-    "        param['dist'] = lambda x: flat_prior(x)\n",
+    "        param['dist'] = lambda x: flat_prior_distribution(x)\n",
     "    elif param['prior_type'] == 'gauss':\n",
     "        param['param'] = param['mean'], param['std']\n",
-    "        param['dist'] = lambda x: gaus_prior(x)"
+    "        param['dist'] = lambda x: gaus_prior_distribution(x)"
    ]
   },
   {
