latest runs with very narrow MCMC sampling

--- a/clean_results.ipynb
+++ b/clean_results.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm -r results/test_nestle29\n",
-      "rm -r results/test_nestle30\n",
-      "rm -r results/test_nestle33\n",
-      "rm -r results/test_nestle34\n",
-      "rm -r results/test_nestle35\n",
-      "rm -r results/test_nestle36\n",
-      "rm -r results/test_nestle39\n",
-      "rm -r results/test_nestle40\n",
-      "rm -r results/test_nestle41\n",
-      "rm -r results/test_nestle42\n",
-      "rm -r results/test_nestle43\n",
-      "rm -r results/test_nestle44\n"
+      "rm -r results/test_nestle26\n",
+      "rm -r results/test_nestle27\n",
+      "rm -r results/test_nestle28\n"
      ]
     }
    ],
    "source": [
-    "for index in [29, 30, 33, 34, 35, 36, 39, 40, 41, 42, 43, 44]:\n",
+    "for index in [26, 27, 28]:\n",
     "# for index in range(143, 146):\n",
     "    cmd = f\"rm -r results/test_nestle{index}\"\n",
     "    print(cmd)\n",
