code cleanup 1 // changed a lot of things in the nestle.py

--- a/nestle_optimization.ipynb
+++ b/nestle_optimization.ipynb
@@ -686,9 +686,9 @@
     "                os.remove(save_dir + file)\n",
     "        # save the config, chain and flattened chain\n",
     "        with open(save_dir + 'config.json', 'w') as fp:\n",
-    "            json.dump(convert_config_to_savable(self.config), fp)\n",
+    "            json.dump(convert_dic_to_savable(self.config), fp)\n",
     "        np.save(save_dir + 'config.npy',\n",
-    "                convert_config_to_savable(self.config))\n",
+    "                convert_dic_to_savable(self.config))\n",
     "        np.save(save_dir + 'full_chain.npy', self.sampler.get_chain())\n",
     "        np.save(save_dir + 'flat_chain.npy', self.sampler.get_chain(\n",
     "            discard=int(self.nsteps * self.remove_frac), thin=self.thin,\n",
