also evaluate the benchamark

--- a/Xe_example.ipynb
+++ b/Xe_example.ipynb
@@ -534,41 +534,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StatModel::\tinitialized for Xe detector. See print(stat_model) for default settings\n"
+      "StatModel::\tinitialized for Xe detector. See print(stat_model) for default settings\n",
+      "StatModel::\ttaking log10 of mass of 20\n",
+      "StatModel::\tre-evaluate benchmark\n"
      ]
     }
    ],
    "source": [
     "stats_30bins = dddm.NestleStatModel(\"Xe\")\n",
+    "stats_30bins.set_benchmark(20,-45)\n",
     "stats_30bins.config['n_energy_bins'] = 30\n",
-    "stats_30bins.eval_benchmark()"
+    "\n",
+    "stats_30bins.eval_benchmark()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'did_run': False, 'saved_in': None}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats_30bins.nlive = 100\n",
-    "stats_30bins.tol = 0.9\n",
-    "stats_30bins.log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -601,210 +583,210 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.005640</td>\n",
+       "      <td>2.548725e-03</td>\n",
        "      <td>1.666667</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>3.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.318973</td>\n",
+       "      <td>5.790253e-01</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>3.333333</td>\n",
        "      <td>6.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>26.657533</td>\n",
+       "      <td>1.086965e+01</td>\n",
        "      <td>8.333333</td>\n",
        "      <td>6.666667</td>\n",
        "      <td>10.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>78.277559</td>\n",
+       "      <td>2.646850e+01</td>\n",
        "      <td>11.666667</td>\n",
        "      <td>10.000000</td>\n",
        "      <td>13.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>75.241701</td>\n",
+       "      <td>1.652730e+01</td>\n",
        "      <td>15.000000</td>\n",
        "      <td>13.333333</td>\n",
        "      <td>16.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>54.804242</td>\n",
+       "      <td>6.377083e+00</td>\n",
        "      <td>18.333333</td>\n",
        "      <td>16.666667</td>\n",
        "      <td>20.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>39.136716</td>\n",
+       "      <td>2.231391e+00</td>\n",
        "      <td>21.666667</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>23.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>27.738442</td>\n",
+       "      <td>7.061249e-01</td>\n",
        "      <td>25.000000</td>\n",
        "      <td>23.333333</td>\n",
        "      <td>26.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>19.511115</td>\n",
+       "      <td>1.899223e-01</td>\n",
        "      <td>28.333333</td>\n",
        "      <td>26.666667</td>\n",
        "      <td>30.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>13.616887</td>\n",
+       "      <td>3.933317e-02</td>\n",
        "      <td>31.666667</td>\n",
        "      <td>30.000000</td>\n",
        "      <td>33.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>9.425545</td>\n",
+       "      <td>5.523743e-03</td>\n",
        "      <td>35.000000</td>\n",
        "      <td>33.333333</td>\n",
        "      <td>36.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>6.467849</td>\n",
+       "      <td>4.617783e-04</td>\n",
        "      <td>38.333333</td>\n",
        "      <td>36.666667</td>\n",
        "      <td>40.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>4.397251</td>\n",
+       "      <td>2.056694e-05</td>\n",
        "      <td>41.666667</td>\n",
        "      <td>40.000000</td>\n",
        "      <td>43.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2.959755</td>\n",
+       "      <td>4.485429e-07</td>\n",
        "      <td>45.000000</td>\n",
        "      <td>43.333333</td>\n",
        "      <td>46.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>1.970595</td>\n",
+       "      <td>4.507252e-09</td>\n",
        "      <td>48.333333</td>\n",
        "      <td>46.666667</td>\n",
        "      <td>50.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>1.296382</td>\n",
+       "      <td>1.998680e-11</td>\n",
        "      <td>51.666667</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>53.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>0.841550</td>\n",
+       "      <td>3.792961e-14</td>\n",
        "      <td>55.000000</td>\n",
        "      <td>53.333333</td>\n",
        "      <td>56.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>0.538166</td>\n",
+       "      <td>3.013508e-17</td>\n",
        "      <td>58.333333</td>\n",
        "      <td>56.666667</td>\n",
        "      <td>60.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>0.338330</td>\n",
+       "      <td>9.864998e-21</td>\n",
        "      <td>61.666667</td>\n",
        "      <td>60.000000</td>\n",
        "      <td>63.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>0.208550</td>\n",
+       "      <td>1.315053e-24</td>\n",
        "      <td>65.000000</td>\n",
        "      <td>63.333333</td>\n",
        "      <td>66.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>0.125623</td>\n",
+       "      <td>7.075680e-29</td>\n",
        "      <td>68.333333</td>\n",
        "      <td>66.666667</td>\n",
        "      <td>70.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>0.073623</td>\n",
+       "      <td>1.526181e-33</td>\n",
        "      <td>71.666667</td>\n",
        "      <td>70.000000</td>\n",
        "      <td>73.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>0.041739</td>\n",
+       "      <td>1.312475e-38</td>\n",
        "      <td>75.000000</td>\n",
        "      <td>73.333333</td>\n",
        "      <td>76.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>0.022714</td>\n",
+       "      <td>4.479778e-44</td>\n",
        "      <td>78.333333</td>\n",
        "      <td>76.666667</td>\n",
        "      <td>80.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>0.011743</td>\n",
+       "      <td>6.044970e-50</td>\n",
        "      <td>81.666667</td>\n",
        "      <td>80.000000</td>\n",
        "      <td>83.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>0.005689</td>\n",
+       "      <td>3.213352e-56</td>\n",
        "      <td>85.000000</td>\n",
        "      <td>83.333333</td>\n",
        "      <td>86.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>0.002541</td>\n",
+       "      <td>6.706702e-63</td>\n",
        "      <td>88.333333</td>\n",
        "      <td>86.666667</td>\n",
        "      <td>90.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
-       "      <td>0.001032</td>\n",
+       "      <td>5.478815e-70</td>\n",
        "      <td>91.666667</td>\n",
        "      <td>90.000000</td>\n",
        "      <td>93.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
-       "      <td>0.000383</td>\n",
+       "      <td>1.746656e-77</td>\n",
        "      <td>95.000000</td>\n",
        "      <td>93.333333</td>\n",
        "      <td>96.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>0.000138</td>\n",
+       "      <td>2.167067e-85</td>\n",
        "      <td>98.333333</td>\n",
        "      <td>96.666667</td>\n",
        "      <td>100.000000</td>\n",
@@ -814,46 +796,68 @@
        "</div>"
       ],
       "text/plain": [
-       "       counts  bin_centers   bin_left   bin_right\n",
-       "0    0.005640     1.666667   0.000000    3.333333\n",
-       "1    1.318973     5.000000   3.333333    6.666667\n",
-       "2   26.657533     8.333333   6.666667   10.000000\n",
-       "3   78.277559    11.666667  10.000000   13.333333\n",
-       "4   75.241701    15.000000  13.333333   16.666667\n",
-       "5   54.804242    18.333333  16.666667   20.000000\n",
-       "6   39.136716    21.666667  20.000000   23.333333\n",
-       "7   27.738442    25.000000  23.333333   26.666667\n",
-       "8   19.511115    28.333333  26.666667   30.000000\n",
-       "9   13.616887    31.666667  30.000000   33.333333\n",
-       "10   9.425545    35.000000  33.333333   36.666667\n",
-       "11   6.467849    38.333333  36.666667   40.000000\n",
-       "12   4.397251    41.666667  40.000000   43.333333\n",
-       "13   2.959755    45.000000  43.333333   46.666667\n",
-       "14   1.970595    48.333333  46.666667   50.000000\n",
-       "15   1.296382    51.666667  50.000000   53.333333\n",
-       "16   0.841550    55.000000  53.333333   56.666667\n",
-       "17   0.538166    58.333333  56.666667   60.000000\n",
-       "18   0.338330    61.666667  60.000000   63.333333\n",
-       "19   0.208550    65.000000  63.333333   66.666667\n",
-       "20   0.125623    68.333333  66.666667   70.000000\n",
-       "21   0.073623    71.666667  70.000000   73.333333\n",
-       "22   0.041739    75.000000  73.333333   76.666667\n",
-       "23   0.022714    78.333333  76.666667   80.000000\n",
-       "24   0.011743    81.666667  80.000000   83.333333\n",
-       "25   0.005689    85.000000  83.333333   86.666667\n",
-       "26   0.002541    88.333333  86.666667   90.000000\n",
-       "27   0.001032    91.666667  90.000000   93.333333\n",
-       "28   0.000383    95.000000  93.333333   96.666667\n",
-       "29   0.000138    98.333333  96.666667  100.000000"
+       "          counts  bin_centers   bin_left   bin_right\n",
+       "0   2.548725e-03     1.666667   0.000000    3.333333\n",
+       "1   5.790253e-01     5.000000   3.333333    6.666667\n",
+       "2   1.086965e+01     8.333333   6.666667   10.000000\n",
+       "3   2.646850e+01    11.666667  10.000000   13.333333\n",
+       "4   1.652730e+01    15.000000  13.333333   16.666667\n",
+       "5   6.377083e+00    18.333333  16.666667   20.000000\n",
+       "6   2.231391e+00    21.666667  20.000000   23.333333\n",
+       "7   7.061249e-01    25.000000  23.333333   26.666667\n",
+       "8   1.899223e-01    28.333333  26.666667   30.000000\n",
+       "9   3.933317e-02    31.666667  30.000000   33.333333\n",
+       "10  5.523743e-03    35.000000  33.333333   36.666667\n",
+       "11  4.617783e-04    38.333333  36.666667   40.000000\n",
+       "12  2.056694e-05    41.666667  40.000000   43.333333\n",
+       "13  4.485429e-07    45.000000  43.333333   46.666667\n",
+       "14  4.507252e-09    48.333333  46.666667   50.000000\n",
+       "15  1.998680e-11    51.666667  50.000000   53.333333\n",
+       "16  3.792961e-14    55.000000  53.333333   56.666667\n",
+       "17  3.013508e-17    58.333333  56.666667   60.000000\n",
+       "18  9.864998e-21    61.666667  60.000000   63.333333\n",
+       "19  1.315053e-24    65.000000  63.333333   66.666667\n",
+       "20  7.075680e-29    68.333333  66.666667   70.000000\n",
+       "21  1.526181e-33    71.666667  70.000000   73.333333\n",
+       "22  1.312475e-38    75.000000  73.333333   76.666667\n",
+       "23  4.479778e-44    78.333333  76.666667   80.000000\n",
+       "24  6.044970e-50    81.666667  80.000000   83.333333\n",
+       "25  3.213352e-56    85.000000  83.333333   86.666667\n",
+       "26  6.706702e-63    88.333333  86.666667   90.000000\n",
+       "27  5.478815e-70    91.666667  90.000000   93.333333\n",
+       "28  1.746656e-77    95.000000  93.333333   96.666667\n",
+       "29  2.167067e-85    98.333333  96.666667  100.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "stats_30bins.check_spectrum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'did_run': False, 'saved_in': None}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_30bins.nlive = 100\n",
+    "stats_30bins.tol = 0.9\n",
+    "stats_30bins.log"
    ]
   },
   {
