begin adding figures to emcee

--- a/notebooks/load_results-emcee.ipynb
+++ b/notebooks/load_results-emcee.ipynb
@@ -99,15 +99,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(np.log10(50))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -117,78 +108,25 @@
     "# for key in selected_keys:\n",
     "    print(f\"---{key}---\")\n",
     "    result = results[key]\n",
-    "    try:       \n",
-    "        info = \"$M_\\chi}$=%.2f\"%10 ** np.float(result['config']['mw'])\n",
-    "        for prior_key in result['config']['prior'].keys():\n",
-    "            try:\n",
-    "                mean = result['config']['prior'][prior_key]['mean']\n",
-    "                info += f\"\\n{prior_key} = {mean}\"\n",
-    "            except KeyError:\n",
-    "                pass\n",
-    "         \n",
-    "        nsteps, nwalkers, ndim = np.shape(result['full_chain'])\n",
-    "        \n",
-    "#         info += \"\\npoisson = %s\"%result['config']['poisson']   \n",
-    "        \n",
-    "        for str_inf in [\"detector\",'notes', 'start', 'fit_time', 'poisson', 'nwalkers', 'nsteps']:\n",
-    "            try: \n",
-    "                info += f\"\\n{str_inf} = %s\"%result['config'][str_inf]\n",
-    "                if str_inf is 'start':\n",
-    "                    info = info[:-7]\n",
-    "                if str_inf == 'fit_time':\n",
-    "                    info += 's (%.1f h)'%(result['config'][str_inf]/3600.)\n",
-    "            except KeyError:\n",
-    "                pass\n",
-    "#         labels = ['log_mass',\n",
-    "#                         'log_cross_section',\n",
-    "#                         'v_0',\n",
-    "#                         'v_esc',\n",
-    "#                         'density'][:ndim]\n",
-    "        info += \"\\nnwalkers = %s\"%nwalkers\n",
-    "        info += \"\\nnsteps = %s\"%nsteps\n",
-    "        labels = ['log_mass',\n",
-    "                        'log_cross_section',\n",
-    "                        'v_0',\n",
-    "                        'v_esc',\n",
-    "                        'density'][:ndim]\n",
-    "        truths = [result['config']['mw'],\n",
-    "                  result['config']['sigma'],\n",
-    "                  result['config']['v_0'],\n",
-    "                  result['config']['v_esc'],\n",
-    "                  result['config']['rho_0']\n",
-    "                  ][:ndim]\n",
-    "        \n",
-    "        fig, axes = plt.subplots(len(labels), figsize=(10, 5), sharex=True)\n",
-    "        samples = result['full_chain']\n",
-    "        for i in range(len(labels)):\n",
-    "            ax = axes[i]\n",
-    "            ax.plot(samples[:, :, i], \"k\", alpha=0.3)\n",
-    "            ax.axhline(truths[i])\n",
-    "            ax.set_xlim(0, len(samples))\n",
-    "            ax.set_ylabel(labels[i])\n",
-    "            ax.yaxis.set_label_coords(-0.1, 0.5)\n",
-    "            \n",
-    "        axes[-1].set_xlabel(\"step number\")\n",
-    "#         plt.savefig(f\"results/{dddm.default_emcee_save_dir()}{key}/walkers{key}.png\", dpi = 200)\n",
-    "        plt.show()\n",
-    "        \n",
-    "        fig= corner.corner(result['flat_chain'],\n",
-    "                            labels = labels,\n",
-    "                            truths = truths,\n",
-    "#                             quantiles=[0.05, 0.5, 0.95],\n",
-    "                           show_titles=True\n",
-    "                           );\n",
-    "#         fig.suptitle(f\"Fit {key}\\n\\n\\n\")\n",
-    "        fig.axes[1].set_title(f\"Fit {key}\", loc = 'left')\n",
-    "        fig.axes[1].text(0,1,info, verticalalignment = 'top')\n",
-    "#         plt.savefig(f\"results/{dddm.default_emcee_save_dir()}{key}/corner{key}.png\", dpi = 200)\n",
-    "        plt.show()\n",
-    "        \n",
-    "    except AssertionError:\n",
-    "        pass\n",
-    "    except ValueError:\n",
-    "        print(f\"In one of the dimentions the walkers did not walk resulting in an empty range.\"\n",
-    "              f\"This is not good, delete threse results. Info\\n{info}\")"
+    "    dddm.emcee_plots(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(results[0]['flat_chain']), np.shape(results[0]['full_chain'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "6000*0.2"
    ]
   },
   {
