first pretty plots

--- a/notebooks/clean_results.ipynb
+++ b/notebooks/clean_results.ipynb
@@ -15,11 +15,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -r ../results/nestle_restart1\n",
+      "rm -r ../results/nestle_restart2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'rm' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -r ../results/nestle_restart9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'rm' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -r ../results/nestle_restart11\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'rm' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -r ../results/nestle_restart12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'rm' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'rm' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
-    "for index in [0, 4, 7, 8, 13, 16, 17, 18, 23, 26, 27, 33, 35]:\n",
+    "for index in [1, 2, 9, 11, 12]:\n",
     "# for index in range(143, 146):\n",
     "    cmd = f\"rm -r ../results/nestle_restart{index}\"\n",
     "    print(cmd)\n",
