--- a/notebooks/speed_optimization_yappi_and_snakeviz.ipynb
+++ b/notebooks/speed_optimization_yappi_and_snakeviz.ipynb
@@ -57,23 +57,124 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StatModel::\t2020-01-07T09:54\n",
+      "StatModel::\t2020-01-07T10:49\n",
       "\tinitialized for Xe_migd detector.See print(stat_model) for default settings\n",
-      "check_save_folder::\tmaking ../../verne/results/veldists/f_params\n",
-      "check_save_folder::\tmaking ../../verne/results/veldists/f_params/loc_XENON\n",
-      "check_save_folder::\tmaking ../../verne/results/veldists/f_params/loc_XENON/v0_230\n",
-      "check_save_folder::\tmaking ../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_544\n",
-      "check_save_folder::\tmaking ../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_544/rho_0.400\n",
+      "check_save_folder::\tmaking ../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_543\n",
+      "check_save_folder::\tmaking ../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_543/rho_0.400\n",
       "No spectrum found at:\n",
-      "../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_544/rho_0.400/sig_-45.0_mx_1.70_avg.csv\n",
+      "../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_543/rho_0.400/sig_-45.0_mx_1.70_avg.csv\n",
       "Generating spectrum, this can take a minute. Execute:\n",
-      "python \"../../verne/\"/src/CalcVelDist.py -m_x 49.99999999999999 -sigma_p 1e-45 -loc XENON -path \"../../verne//src/\" -v_0 230.0 -v_esc 544.0000000000001 -save_as \"../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_544/rho_0.400/sig_-45.0_mx_1.70_avg.csv\" \n"
+      "python \"../../verne/\"/src/CalcVelDist.py -m_x 49.99999999999999 -sigma_p 1e-45 -loc XENON -path \"../../verne//src/\" -v_0 230.0 -v_esc 543.9999999999999 -save_as \"../../verne/results/veldists/f_params/loc_XENON/v0_230/vesc_543/rho_0.400/sig_-45.0_mx_1.70_avg.csv\" \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3326, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-3-d9c314f263b9>\", line 5, in <module>\n",
+      "    dddm.NestleStatModel('Xe_migd')\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/nestle.py\", line 26, in __init__\n",
+      "    StatModel.__init__(self, *args)\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/statistics.py\", line 97, in __init__\n",
+      "    self.set_default()\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/statistics.py\", line 197, in set_default\n",
+      "    self.eval_benchmark()\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/statistics.py\", line 219, in eval_benchmark\n",
+      "    self.benchmark_values = self.check_spectrum()['counts']\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/statistics.py\", line 214, in check_spectrum\n",
+      "    return spectrum.get_data(poisson=self.config['poisson'])\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/detector.py\", line 295, in get_data\n",
+      "    result['counts'] = self.get_events()\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/detector.py\", line 277, in get_events\n",
+      "    return self.compute_detected_spectrum()\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/detector.py\", line 256, in compute_detected_spectrum\n",
+      "    rates = self.spectrum_simple([self.mw, self.sigma_nucleon])\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/halo.py\", line 122, in spectrum_simple\n",
+      "    **migdal_integration_kwargs\n",
+      "  File \"<boltons.funcutils.FunctionBuilder-3>\", line 2, in rate_migdal\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/forked_wimprates/wimprates/utils.py\", line 60, in newf\n",
+      "    for x in itr(xs)])\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/forked_wimprates/wimprates/utils.py\", line 60, in <listcomp>\n",
+      "    for x in itr(xs)])\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/forked_wimprates/wimprates/migdal.py\", line 161, in rate_migdal\n",
+      "    **kwargs)[0]\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 581, in dblquad\n",
+      "    opts={\"epsabs\": epsabs, \"epsrel\": epsrel})\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 805, in nquad\n",
+      "    return _NQuad(func, ranges, opts, full_output).integrate(*args)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 860, in integrate\n",
+      "    **opt)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 341, in quad\n",
+      "    points)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 448, in _quad\n",
+      "    return _quadpack._qagse(func,a,b,args,full_output,epsabs,epsrel,limit)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 860, in integrate\n",
+      "    **opt)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 341, in quad\n",
+      "    points)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/scipy/integrate/quadpack.py\", line 448, in _quad\n",
+      "    return _quadpack._qagse(func,a,b,args,full_output,epsabs,epsrel,limit)\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/forked_wimprates/wimprates/migdal.py\", line 151, in diff_rate\n",
+      "    * p(eelec))\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/halo.py\", line 305, in velocity_dist\n",
+      "    self.load_f()\n",
+      "  File \"/mnt/c/Users/Joran/Google Drive/PhD-master/ubuntu-storage/windows-anaconda/DD_DM_targets/DirectDmTargets/halo.py\", line 295, in load_f\n",
+      "    @memoize\n",
+      "NameError: name 'memoize' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 2040, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 1101, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 319, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 353, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/inspect.py\", line 1502, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/inspect.py\", line 1460, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/inspect.py\", line 696, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/home/joran/.conda/envs/DD_DM/lib/python3.7/inspect.py\", line 742, in getmodule\n",
+      "    os.path.realpath(f)] = module.__name__\n",
+      "AttributeError: module has no attribute '__name__'\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'memoize' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
      ]
     }
    ],
@@ -92,42 +193,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "dddm.NestleStatModel('Xe_migd')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "dddm.NestleStatModel('Xe_migd')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "dddm.NestleStatModel('Xe_migd')\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "spec = dddm.VerneSHM()\n",
+    "test = dddm.DetectorSpectrum(1, 1e-40, spec, dddm.experiment['Xe_migd'])\n",
+    "\n",
+    "test.get_data(poisson = False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "# This is with setting the dblquad to a lower precision\n",
+    "spec = dddm.VerneSHM()\n",
+    "test = dddm.DetectorSpectrum(1, 1e-40, spec, dddm.experiment['Xe_migd'])\n",
+    "test.get_data(poisson = False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -142,13 +257,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_class = dddm.NestleStatModel('Xe_migd')\n",
-    "fit_class.tol = 0.8\n",
-    "# fit_class.nwalkers = 5\n",
-    "# fit_class.nsteps = 10\n",
-    "fit_class.nlive = 10\n",
-    "fit_class.set_prior('migdal')\n",
-    "print(f\"Fitting for parameters:\\n{fit_class.fit_parameters}\")"
+    "%%time\n",
+    "# This is with setting the dblquad to a default precision\n",
+    "spec = dddm.VerneSHM()\n",
+    "test = dddm.DetectorSpectrum(1, 1e-40, spec, dddm.experiment['Xe_migd'])\n",
+    "test.get_data(poisson = False)"
    ]
   },
   {
