edit multinest output handling

--- a/notebooks/pymultinest_optimization.ipynb
+++ b/notebooks/pymultinest_optimization.ipynb
@@ -12280,11 +12280,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NestedSamplerStatModel::\t2020-01-24T14:27\n",
+      "\tgetting the summary (or at least trying) let's first see if I did run\n",
+      "parameter values:\n",
+      "       log_mass : 1.706 +- 0.037\n",
+      "\t mass 50.8 +/- 4.4\n",
+      "log_cross_section : -45.002 +- 0.024\n",
+      "\t cross_section 9.96e-46 +/- 5.6e-47\n",
+      "save_results::\t{now()}\n",
+      "\tdone_saving\n"
+     ]
+    }
+   ],
    "source": [
-    "assert False"
+    "stats2.save_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/c/Users/Joran/dddm_data/results/nested_multinest3/'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats2.log['saved_in']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.69753215, -44.93793102],\n",
+       "       [  1.7779064 , -45.04776336],\n",
+       "       [  1.80100184, -44.99766417],\n",
+       "       [  1.63387274, -44.94269907],\n",
+       "       [  1.72396678, -45.05598477],\n",
+       "       [  1.63804465, -44.99362655],\n",
+       "       [  1.75330699, -44.97390368],\n",
+       "       [  1.65936789, -44.94824869],\n",
+       "       [  1.76976305, -45.02585974],\n",
+       "       [  1.63905017, -44.971223  ],\n",
+       "       [  1.64346867, -44.96223939],\n",
+       "       [  1.65044249, -44.99027536],\n",
+       "       [  1.65044249, -44.99027536],\n",
+       "       [  1.69987486, -45.03493689],\n",
+       "       [  1.69987486, -45.03493689],\n",
+       "       [  1.74514338, -44.98998743],\n",
+       "       [  1.74514338, -44.98998743],\n",
+       "       [  1.69832152, -45.03251136],\n",
+       "       [  1.74619567, -45.02119612],\n",
+       "       [  1.74619567, -45.02119612],\n",
+       "       [  1.74931036, -45.01463386],\n",
+       "       [  1.74931036, -45.01463386],\n",
+       "       [  1.73422178, -44.98999515],\n",
+       "       [  1.66268003, -44.99486128],\n",
+       "       [  1.66268003, -44.99486128],\n",
+       "       [  1.73893219, -45.01934627],\n",
+       "       [  1.71303429, -45.0280222 ],\n",
+       "       [  1.71303429, -45.0280222 ],\n",
+       "       [  1.69921308, -44.97724726],\n",
+       "       [  1.71897146, -45.02140235],\n",
+       "       [  1.6768098 , -44.98190794],\n",
+       "       [  1.70424172, -45.01801645],\n",
+       "       [  1.70953191, -44.98910068],\n",
+       "       [  1.72150342, -45.01101356],\n",
+       "       [  1.68001574, -45.00014728],\n",
+       "       [  1.71622757, -45.01238353],\n",
+       "       [  1.6955248 , -45.01236534],\n",
+       "       [  1.71702657, -44.99985523],\n",
+       "       [  1.68505172, -44.98642413],\n",
+       "       [  1.70950226, -45.01092738],\n",
+       "       [  1.71391791, -45.00233408],\n",
+       "       [  1.7046224 , -45.00893558],\n",
+       "       [  1.70241387, -45.0060455 ],\n",
+       "       [  1.69787647, -45.00095129],\n",
+       "       [  1.69668645, -45.00756546],\n",
+       "       [  1.69401504, -45.00201487],\n",
+       "       [  1.69517986, -44.99137941],\n",
+       "       [  1.7104361 , -45.00032267]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.load('/mnt/c/Users/Joran/dddm_data/results/nested_multinest3/samples.npy')"
    ]
   },
   {
