update from stoomboot

--- a/notebooks/migd_detectors.ipynb
+++ b/notebooks/migd_detectors.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import DirectDmTargets as dddm"
+    "%run common_init.py"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dddm.detectors['Xe']"
+    "dddm.experiment['Xe_migd_bg']"
    ]
   },
   {
