--- a/notebooks/summary-migdal-Copy1.ipynb
+++ b/notebooks/summary-migdal-Copy1.ipynb
@@ -279,6 +279,7 @@
     "    events = dddm.DetectorSpectrum(mw, sigma, shm, dddm.experiment[det])\n",
     "    events.n_bins = nbins\n",
     "    events.add_background = background\n",
+    "    print(f'we set background to {events.add_background}')\n",
     "    return events.get_data(poisson = False)"
    ]
   },
@@ -342,9 +343,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plot_spectra('Xe_migd', nbins = 1000)\n",
+    "plot_spectra('Xe_migd_bg', nbins = 200)\n",
     "for f_type in ['pdf', 'png']:\n",
-    "    plt.savefig(f'{save_dir}/shm_det.spectrum1.{f_type}', dpi = 100, bbox_inches= 'tight')"
+    "    plt.savefig(f'{save_dir}/shm_det_bg.spectrum1.{f_type}', dpi = 100, bbox_inches= 'tight')"
    ]
   },
   {
@@ -369,9 +370,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plot_spectra('Xe_migd', nbins = 1000)\n",
+    "plot_spectra('Xe_migd_bg', nbins = 200)\n",
     "for f_type in ['pdf', 'png']:\n",
-    "    plt.savefig(f'{save_dir}/verne_det.spectrum2.{f_type}', dpi = 100, bbox_inches= 'tight')"
+    "    plt.savefig(f'{save_dir}/verne_det_bg.spectrum2.{f_type}', dpi = 100, bbox_inches= 'tight')"
    ]
   },
   {
@@ -387,9 +388,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_det_spec(det, mw = 1, sigma = 1e-34, nbins = 10, background = True, shm = use_SHM):\n",
+    "    events = dddm.DetectorSpectrum(mw, sigma, shm, dddm.experiment[det])\n",
+    "    events.n_bins = nbins\n",
+    "    print(f'we set background to {events.add_background}')\n",
+    "    return events.get_data(poisson = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def spectra_for_shm(ax, det, shm, label =\"\", mw = 1, sigma = 1e-34, nbins = 10, c = 'red'):\n",
     "    bg_spec = get_det_spec(det, mw = mw, \n",
-    "                           sigma = sigma, nbins = nbins, background = False, shm = shm)\n",
+    "                           sigma = sigma, nbins = nbins, shm = shm)\n",
     "    plot_spectrum_ax(ax1, bg_spec, color = c,\n",
     "                     label = label)\n",
     "    plt.xlabel('E [keV]')"
@@ -417,7 +431,7 @@
     "                v_esc = 544* nu.km / nu.s, \n",
     "                rho_dm = 0.3 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "    use_SHM = dddm.SHM(**args)\n",
-    "    spectra_for_shm(ax1, 'Xe_migd', use_SHM, nbins = 10, \n",
+    "    spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, nbins = 10, \n",
     "                    label = f'v0 = {v_0} km/s', c = cm(float(i)/len(vlist)) )\n",
     "plt.legend()\n",
     "plt.yscale(\"log\")"
@@ -436,7 +450,7 @@
     "                v_esc = v_esc* nu.km / nu.s, \n",
     "                rho_dm = 0.3 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "    use_SHM = dddm.SHM(**args)\n",
-    "    spectra_for_shm(ax1, 'Xe_migd', use_SHM, nbins = 10, \n",
+    "    spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, nbins = 10, \n",
     "                    label = f'v_esc = {v_esc} km/s', c = cm(float(i)/len(vlist)) )\n",
     "plt.legend()\n",
     "plt.yscale(\"log\")"
@@ -447,8 +461,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "path = \"/mnt/c/Users/Joran/dddm_data/spectra/nbin-10/model-shm/mw-1.00/log_s--39.02/rho-0.55/v_0-233.0/v_esc-528/poisson_0/spectrum_Xe_migdal_25_0.8_0.5_1.4_XENON_10.0_Xe_migd-HDESKTOP-URE1BBI.localdomain-P10802.csv\"\n",
+    "fig, (ax1) = plt.subplots(1, figsize = (14,8), sharex = True)\n",
+    "args = dict(v_0=233* nu.km / nu.s, \n",
+    "        v_esc = 548* nu.km / nu.s, \n",
+    "        rho_dm = 0. * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
+    "use_SHM = dddm.SHM(**args)\n",
+    "spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, nbins = 10, \n",
+    "            label = f'v_esc = {v_esc} km/s', c = 'r' )\n",
+    "plt.legend()\n",
+    "plt.yscale(\"log\")\n",
+    "plt.axhline(80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/mnt/c/Users/Joran/dddm_data/spectra/nbin-10/model-shm/mw-1.00/log_s--39.02/rho-0.55/v_0-233.0/v_esc-528/poisson_0/spectrum_Xe_migdal_bg_25_0.8_0.5_1.4_XENON_10.0_Xe_migd-HDESKTOP-URE1BBI.localdomain-P10802.csv\"\n",
     "# path = \"/mnt/c/Users/Joran/dddm_data/spectra//nbin-10/model-shm/mw-1.14/log_s--35.61/rho-0.21/v_0-142.8/v_esc-503/poisson_0/spectrum_Xe_migdal_25_0.8_0.5_1.4_XENON_10.0_Xe_migd-HDESKTOP-URE1BBI.localdomain-P812.csv\"\n",
     "print(path)\n",
     "os.path.exists(path)"
@@ -460,8 +499,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_intermediate = pd.read_csv(path)\n",
-    "read_intermediate"
+    "# read_intermediate = pd.read_csv(path)\n",
+    "# read_intermediate"
    ]
   },
   {
@@ -472,7 +511,7 @@
    },
    "outputs": [],
    "source": [
-    "read_intermediate.plot('bin_centers', 'counts')"
+    "# read_intermediate.plot('bin_centers', 'counts')"
    ]
   },
   {
@@ -485,7 +524,7 @@
     "                v_esc = 528* nu.km / nu.s, \n",
     "                rho_dm = 0.55 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "compare_shm = dddm.SHM(**args)\n",
-    "compare_spec = get_det_spec('Xe_migd', mw = 1, sigma = 10.**-39.02\n",
+    "compare_spec = get_det_spec('Xe_migd_bg', mw = 1, sigma = 10.**-39.02\n",
     "             , nbins = 10, background = False, shm = compare_shm)"
    ]
   },
@@ -499,7 +538,7 @@
     "                v_esc = 528* nu.km / nu.s, \n",
     "                rho_dm = 0.4 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "compare_shm = dddm.SHM(**args)\n",
-    "compare_spec2 = get_det_spec('Xe_migd', mw = 1, sigma = 10.**-39.02\n",
+    "compare_spec2 = get_det_spec('Xe_migd_bg', mw = 1, sigma = 10.**-39.02\n",
     "             , nbins = 10, background = False, shm = compare_shm)"
    ]
   },
@@ -513,7 +552,7 @@
     "#                 v_esc = 528* nu.km / nu.s, \n",
     "#                 rho_dm = 0.21 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "# compare_shm = dddm.SHM(**args)\n",
-    "# compare_spec3 = get_det_spec('Xe_migd', mw = 1.14, sigma = 10.**-35.61\n",
+    "# compare_spec3 = get_det_spec('Xe_migd_bg', mw = 1.14, sigma = 10.**-35.61\n",
     "#              , nbins = 10, background = False, shm = compare_shm)"
    ]
   },
@@ -532,8 +571,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xs = read_intermediate['bin_centers'].values\n",
-    "plt.plot(xs, read_intermediate['counts'].values, label = 'read')\n",
+    "xs = compare_spec['bin_centers'].values\n",
+    "# plt.plot(xs, read_intermediate['counts'].values, label = 'read')\n",
     "plt.plot(xs, compare_spec['counts'].values, label = 'should equal')\n",
     "plt.plot(xs, compare_spec2['counts'].values, label = 'default')\n",
     "# plt.plot(xs, compare_spec3['counts'].values, label = 'default-shm')\n",
@@ -550,7 +589,7 @@
     "                v_esc = 503* nu.km / nu.s, \n",
     "                rho_dm = 0.21 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "compare_shm = dddm.SHM(**args)\n",
-    "compare_spec = get_det_spec('Xe_migd', mw = 1.14, sigma = 10.**-35.61\n",
+    "compare_spec = get_det_spec('Xe_migd_bg', mw = 1.14, sigma = 10.**-35.61\n",
     "             , nbins = 10, background = False, shm = compare_shm)"
    ]
   },
@@ -564,7 +603,7 @@
     "                v_esc = 528* nu.km / nu.s, \n",
     "                rho_dm = 0.55 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "compare_shm = dddm.SHM(**args)\n",
-    "compare_spec2 = get_det_spec('Xe_migd', mw = 1, sigma = 10.**-35\n",
+    "compare_spec2 = get_det_spec('Xe_migd_bg', mw = 1, sigma = 10.**-35\n",
     "             , nbins = 10, background = False, shm = compare_shm)"
    ]
   },
@@ -578,7 +617,7 @@
     "                v_esc = 528* nu.km / nu.s, \n",
     "                rho_dm = 0.21 * nu.GeV / nu.c0 ** 2 / nu.cm ** 3)\n",
     "compare_shm = dddm.SHM(**args)\n",
-    "compare_spec3 = get_det_spec('Xe_migd', mw = 1.14, sigma = 10.**-35.61\n",
+    "compare_spec3 = get_det_spec('Xe_migd_bg', mw = 1.14, sigma = 10.**-35.61\n",
     "             , nbins = 10, background = False, shm = compare_shm)"
    ]
   },
@@ -588,11 +627,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xs = read_intermediate['bin_centers'].values\n",
-    "plt.plot(xs, read_intermediate['counts'].values, label = 'read')\n",
+    "# xs = read_intermediate['bin_centers'].values\n",
+    "# plt.plot(xs, read_intermediate['counts'].values, label = 'read')\n",
     "plt.plot(xs, compare_spec['counts'].values, label = 'should equal')\n",
-    "# plt.plot(xs, compare_spec2['counts'].values, label = 'default')\n",
-    "# plt.plot(xs, compare_spec3['counts'].values, label = 'default-shm')\n",
+    "plt.plot(xs, compare_spec2['counts'].values, label = 'default')\n",
+    "plt.plot(xs, compare_spec3['counts'].values, label = 'default-shm')\n",
     "plt.legend()"
    ]
   },
@@ -674,7 +713,7 @@
     "#     plt_ll_sigma_mass(GenSpectrum, 'mass', det=det, bins=bins, m=m, sig=sig)\n",
     "\n",
     "\n",
-    "def plt_ll_migd(det='Xe_migd', var = 'v_0' , bins=10, m=1, sig=1e-42):\n",
+    "def plt_ll_migd(det='Xe_migd_bg', var = 'v_0' , bins=10, m=1, sig=1e-42):\n",
     "    return plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, var, det=det, bins=bins, m=m, sig=sig)"
    ]
   },
@@ -695,7 +734,7 @@
    },
    "outputs": [],
    "source": [
-    "res2 = plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, 'sig', det='Xe_migd', bins=10, m=1, sig=1e-42)\n",
+    "res2 = plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, 'sig', det='Xe_migd_bg', bins=10, m=1, sig=1e-42)\n",
     "plt.xscale(\"log\")"
    ]
   },
@@ -705,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res3 = plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, 'mass', det='Xe_migd', bins=10, m=1, sig=1e-42)\n",
+    "res3 = plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, 'mass', det='Xe_migd_bg', bins=10, m=1, sig=1e-42)\n",
     "# plt.xscale(\"log\")"
    ]
   },
@@ -722,43 +761,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res4 = plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, 'v_0', det='Xe', bins=10, m=50, sig=1e-46)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res4 = plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, 'v_0', det='Xe', bins=10, m=50, sig=1e-46)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res5 = plt_ll_sigma_mass_migd(dddm.DetectorSpectrum, 'v_0', det='Xe', bins=10, m=50, sig=1e-47)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(res4[0],res4[1])\n",
-    "plt.plot(res5[0],res5[1])"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -796,7 +798,7 @@
     "    fig, (ax1) = plt.subplots(1, figsize = (14,8), sharex = True)\n",
     "    for i, s in enumerate(sigmas):        \n",
     "        lab =  f\"m={m} s={s}\"        \n",
-    "        spectra_for_shm(ax1, 'Xe_migd', use_SHM, \n",
+    "        spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, \n",
     "                        label = lab, mw=m, \n",
     "                        sigma = 10**s, c = cm(float(i)/len(sigmas)))\n",
     "    plt.legend()\n",
@@ -822,7 +824,7 @@
     "    fig, (ax1) = plt.subplots(1, figsize = (14,8), sharex = True)\n",
     "    for i, s in enumerate(sigmas):        \n",
     "        lab =  f\"m={m} s={s}\"        \n",
-    "        spectra_for_shm(ax1, 'Xe_migd', use_SHM, \n",
+    "        spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, \n",
     "                        label = lab, mw=m, sigma = 10**s, c = cm(float(i)/len(sigmas)))\n",
     "    plt.legend()\n",
     "    plt.yscale(\"symlog\")\n",
@@ -849,7 +851,7 @@
     "    fig, (ax1) = plt.subplots(1, figsize = (14,8), sharex = True)\n",
     "    for i, s in enumerate(sigmas):        \n",
     "        lab =  f\"m={m} s={s}\"        \n",
-    "        spectra_for_shm(ax1, 'Xe_migd', use_SHM, \n",
+    "        spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, \n",
     "                        label = lab, mw=m, sigma = 10**s, c = cm(float(i)/len(sigmas)))\n",
     "    plt.legend()\n",
     "    plt.yscale(\"symlog\")\n",
@@ -888,7 +890,7 @@
     "    fig, (ax1) = plt.subplots(1, figsize = (14,8), sharex = True)\n",
     "    for i, s in enumerate(sigmas):        \n",
     "        lab =  f\"m={m} s={s}\"        \n",
-    "        spectra_for_shm(ax1, 'Xe_migd', use_SHM, \n",
+    "        spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, \n",
     "                        label = lab, mw=m, sigma = 10**s, c = cm(float(i)/len(sigmas)),\n",
     "                       nbins = 100)\n",
     "    plt.legend()\n",
@@ -930,7 +932,7 @@
     "    fig, (ax1) = plt.subplots(1, figsize = (14,8), sharex = True)\n",
     "    for i, s in enumerate(sigmas):        \n",
     "        lab =  f\"m={m} s={s}\"        \n",
-    "        spectra_for_shm(ax1, 'Xe_migd', use_SHM, \n",
+    "        spectra_for_shm(ax1, 'Xe_migd_bg', use_SHM, \n",
     "                        label = lab, mw=m, sigma = 10**s, c = cm(float(i)/len(sigmas)),\n",
     "                       nbins = 100)\n",
     "    plt.legend()\n",
@@ -938,6 +940,62 @@
     "    plt.show()\n",
     "    print(f'Took {time.time()-start} s')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
